--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <video id="cam" autoplay playsinline muted></video>
+
 
   <div id="hit-counter">0</div>
   
