--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="hit-counter">0</div>
   
   <!-- 鬼 -->
-  <img id="oni" src="assets/oni_idle.png" />
+  <div id="oni" class="idle"></div>
 
   <!-- 豆（使い回し） -->
   <img id="bean" src="assets/bean.png" style="display:none;" />
