--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>豆まきAR（仮）</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <title>豆まきAR（疑似）</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <video id="cam" autoplay playsinline muted></video>
 
+  <!-- カメラ背景（疑似AR） -->
+  <video id="cam" autoplay playsinline muted></video>
 
+  <!-- UI -->
   <div id="hit-counter">0</div>
-  
-  <!-- 鬼 -->
-  <div id="oni" class="idle"></div>
-
-  <!-- 豆（使い回し） -->
-  <img id="bean" src="assets/bean.png" style="display:none;" />
-
-  <script src="main.js"></script>
-
   <div id="congrats">🎉 Congratulations!! 🎉</div>
 
+  <!-- 鬼（imgじゃなくdiv背景） -->
+  <div id="oni" class="idle"></div>
+
+  <script src="main.js"></script>
 </body>
 </html>
