--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>豆まきAR（マーカーなし）</title>
+  <title>豆まき</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
