ogp設定　豆の音変更

--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <title>豆まき</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- OGP -->
+<meta property="og:title" content="豆まきゲーム|スマホで鬼退治" />
+<meta property="og:description" content="ただただ、鬼に豆を投げるだけのゲーム" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://yurucrasounds-suzuki3.github.io/sestubun/" />
+<meta property="og:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/ogp.png" />
+
+<!-- Twitter(X)用 -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="豆まきゲーム｜スマホで鬼退治" />
+<meta name="twitter:description" content="ただただ、鬼に豆を投げるだけのゲーム" />
+<meta name="twitter:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/ogp.png" />
+
 </head>
 <body>
 
   <!-- UI -->
   <div id="hit-counter">0</div>
   <div id="congrats">🎉 Congratulations!! 🎉</div>
-  <div id="hint">画面をタップして鬼を出す → 鬼を長押しで豆連射</div>
+  <div id="hint">画面をタップして鬼を出す → 鬼は外！福は内！</div>
 
   <!-- 鬼（div背景で長押しメニュー回避） -->
   <div id="oni" class="idle hidden"></div>
