--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <meta property="og:description" content="ただただ、鬼に豆を投げるだけのゲーム" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://yurucrasounds-suzuki3.github.io/sestubun/" />
-<meta property="og:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/ogp.png" />
+<meta property="og:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/assets/ogp.png" />
 
 <!-- Twitter(X)用 -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="豆まきゲーム｜スマホで鬼退治" />
 <meta name="twitter:description" content="ただただ、鬼に豆を投げるだけのゲーム" />
-<meta name="twitter:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/ogp.png" />
+<meta name="twitter:image" content="https://yurucrasounds-suzuki3.github.io/sestubun/assets/ogp.png" />
 
 </head>
 <body>
